--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-source-contentful": "^2.0.50",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-sharp": "^2.1.18",
+    "moment": "^2.24.0",
     "npm-check-updates": "^3.1.8",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
